--- a/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
+++ b/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
@@ -46,10 +46,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -152,6 +160,66 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BusinessRole.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Client.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ClientOpportunities.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ClientOpportunities.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ClientOpportunities.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ClientOpportunities.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ClientOpportunities.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DefaultViewRole.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Grade.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Opportunity.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\OpportunityStatus.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PermissionRole.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Position.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Practice.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Region.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SoldStatus.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Unit.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UnitPractice.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\User.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserBusinessRole.cs">
+      <DependentUpon>ClientOpportunities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -163,10 +231,27 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\ClientOpportunities.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ClientOpportunities.edmx</DependentUpon>
+      <LastGenOutput>ClientOpportunities.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\ClientOpportunities.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ClientOpportunities.edmx</DependentUpon>
+      <LastGenOutput>ClientOpportunities.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <EntityDeploy Include="Models\ClientOpportunities.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ClientOpportunities.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\ClientOpportunities.edmx.diagram">
+      <DependentUpon>ClientOpportunities.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -196,7 +281,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -210,6 +294,9 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
