10-B-Data Access Dashboard object, created model of DashboardData called MainViewData.  Created function in HomeController that returns a json message of the procedure data.

--- a/SogetiStaffingPlanner/Web.config
+++ b/SogetiStaffingPlanner/Web.config
@@ -14,9 +14,17 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.7.1" />
-    <httpRuntime targetFramework="4.7.1" />
+    <compilation debug="true" targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
@@ -78,5 +86,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings configSource="connectionStrings.config"></connectionStrings>
-</configuration>
+<connectionStrings><add name="Dev_ClientOpportunitiesEntities" connectionString="metadata=res://*/Models.MainViewData.csdl|res://*/Models.MainViewData.ssdl|res://*/Models.MainViewData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.224.91.41;initial catalog=Dev_ClientOpportunities;persist security info=True;user id=webapp;password=webapp;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
