10-B-Data Dashboard Object, changed how to connect to the server so that sensitive info is not shown.

--- a/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
+++ b/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
@@ -184,24 +184,7 @@
     <Compile Include="Models\Grade.cs">
       <DependentUpon>ClientOpportunities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\MainViewData.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MainViewData.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\MainViewData.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MainViewData.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\MainViewData.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MainViewData.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Models\MainView_Result.cs">
-      <DependentUpon>MainViewData.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Models\MainViewData.cs" />
     <Compile Include="Models\Opportunity.cs">
       <DependentUpon>ClientOpportunities.tt</DependentUpon>
     </Compile>
@@ -257,16 +240,6 @@
       <DependentUpon>ClientOpportunities.edmx</DependentUpon>
       <LastGenOutput>ClientOpportunities.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\MainViewData.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MainViewData.edmx</DependentUpon>
-      <LastGenOutput>MainViewData.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\MainViewData.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MainViewData.edmx</DependentUpon>
-      <LastGenOutput>MainViewData.cs</LastGenOutput>
-    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -278,13 +251,6 @@
     </EntityDeploy>
     <Content Include="Models\ClientOpportunities.edmx.diagram">
       <DependentUpon>ClientOpportunities.edmx</DependentUpon>
-    </Content>
-    <EntityDeploy Include="Models\MainViewData.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MainViewData.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\MainViewData.edmx.diagram">
-      <DependentUpon>MainViewData.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
