25-E-Add Clients-Add Client Data Access Added a sync call

--- a/SogetiStaffingPlanner/Web.config
+++ b/SogetiStaffingPlanner/Web.config
@@ -23,8 +23,8 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6.2"/>
-    <httpRuntime targetFramework="4.6.2"/>
+    <compilation debug="true" targetFramework="4.6.1"/>
+    <httpRuntime targetFramework="4.6.1"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
@@ -86,5 +86,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
-  <connectionStrings configSource="connectionStrings.config"/>
+	<connectionStrings>
+		<add name="Dev_ClientOpportunitiesEntities" connectionString="metadata=res://*/Models.Opportunities.csdl|res://*/Models.Opportunities.ssdl|res://*/Models.Opportunities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.224.91.41;initial catalog=Dev_ClientOpportunities;persist security info=True;user id=webapp;password=webapp;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 </configuration>
