--- a/SogetiStaffingPlanner/Web.config
+++ b/SogetiStaffingPlanner/Web.config
@@ -86,7 +86,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
-	<connectionStrings>
-		<add name="Dev_ClientOpportunitiesEntities" connectionString="metadata=res://*/Models.Opportunities.csdl|res://*/Models.Opportunities.ssdl|res://*/Models.Opportunities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.224.91.41;initial catalog=Dev_ClientOpportunities;persist security info=True;user id=webapp;password=webapp;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+	<connectionStrings configSource="connectionStrings.config"/>
 </configuration>
