--- a/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
+++ b/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
@@ -164,7 +164,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\PositionController.cs" />
+    <Compile Include="Controllers\PositionsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
