changed client page to be the default index page. When adding, it alerts and clears the form.

--- a/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
+++ b/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
@@ -306,7 +306,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Clients\Create.cshtml" />
+    <Content Include="Views\Clients\Index.cshtml" />
     <Content Include="Views\Positions\AddPosition.cshtml" />
   </ItemGroup>
   <ItemGroup>
