87-A-Correct Naming Scheme- Changed Clients and PositionsController to singular, changed MainViewData to PracticeManagerData, and CLients and Positions views to singular and changed the link reference in shared.

--- a/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
+++ b/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
@@ -165,9 +165,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountExecutiveController.cs" />
-    <Compile Include="Controllers\ClientsController.cs" />
+    <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\PositionsController.cs" />
+    <Compile Include="Controllers\PositionController.cs" />
     <Compile Include="Controllers\OpportunityController.cs" />
     <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Controllers\UnitController.cs" />
@@ -201,7 +201,7 @@
     <Compile Include="Models\Grade.cs">
       <DependentUpon>ClientOpportunities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\MainViewData.cs" />
+    <Compile Include="Models\PracticeManagerData.cs" />
     <Compile Include="Models\ListObjects.cs" />
     <Compile Include="Models\Opportunity.cs">
       <DependentUpon>ClientOpportunities.tt</DependentUpon>
@@ -307,8 +307,8 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Clients\Index.cshtml" />
-    <Content Include="Views\Positions\Index.cshtml" />
+    <Content Include="Views\Client\Index.cshtml" />
+    <Content Include="Views\Position\Index.cshtml" />
     <Content Include="Views\Opportunity\Index.cshtml" />
     <Content Include="Views\AccountExecutive\Index.cshtml" />
     <Content Include="Views\Region\Index.cshtml" />
