169-E-Edit Client - Update Client Data Access - Added the edit client method in the client controller and added ClientData.cs to hold extra information for client to send to front end in the getClients method so username is included.

--- a/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
+++ b/SogetiStaffingPlanner/SogetiStaffingPlanner.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Models\Client.cs">
       <DependentUpon>ClientOpportunities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ClientData.cs" />
     <Compile Include="Models\ClientOpportunities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
